--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
       args:
         - POETRY_VERSION=${POETRY_VERSION}
     volumes:
-      - .env:/app/.env
+      - ./.env:/app/.env
       - ./src:/app/src
       - ./alembic:/app/alembic
-      - ./poetry.lock:/app/poetry.lock
+      - ./alembic.ini:/app/alembic.ini
+      # - ./poetry.lock:/app/poetry.lock
       - ./pyproject.toml:/app/pyproject.toml
       - ./Dockerfile:/app/Dockerfile
     ports:
@@ -55,7 +56,6 @@ services:
       # MINIO_ROOT_PASSWORD: ${MINIO__ROOT_PASSWORD}
       MINIO_ACCESS_KEY: ${MINIO__ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO__SECRET_KEY}
-
 
 volumes:
   minio_data:
