looks like its done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,7 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+types-aiofiles = "^25.1.0.20251011"
+
